# agent-from-scratch

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: agent.py  cli_commands.py  context.py  mcp.py  memory.py  prompts.py  provider.py  retry.py  schemas.py  security.py  session.py  setup.py  token_tracker.py  tool.py  tool_registry.py  tools.py  verification.py  workspace.py
docs/: learning_notes.md
scripts/: __init__.py  evaluate_coding_tasks.py  evaluate_tool_selection.py
tests/: test_agent.py  test_coding_evaluation.py  test_context.py  test_main.py  test_mcp.py  test_memory.py  test_provider.py  test_retry.py  test_run_outcomes.py  test_session.py  test_token_tracker.py  test_tool_selection.py  test_tools.py  test_verification.py  test_workspace.py
