[project]
name = "agent-from-scratch"
version = "0.1.0"
description = "A small terminal coding agent built from scratch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.103.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
agent = "main:cli"

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
exclude = ["docs/"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.setuptools]
packages = ["agent", "scripts"]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
